update the to do list

--- a/main.css
+++ b/main.css
@@ -13,6 +13,9 @@
 	box-sizing: border-box;
 	font-family: "Fira sans", sans-serif;
 }
+.to-do-title{
+    text-align: center;
+}
 
 body {
 	display: flex;
